# backend

./: .gitignore  .pre-commit-config.yaml  ML_README.md  README.md  pyproject.toml
src/: API_명세서.md
src/backend/: API_SPECIFICATION.md  check_admin_coverage.py  check_db_structure.py  check_tables.py  check_videos.py  loaddata.json  manage.py  test_api.py  update_video.py
src/backend/emodia/: admin.py  apps.py  ml_utils.py  models.py  serializers.py  train_model.py  urls.py  views.py
src/backend/emodia/management/commands/: populate_videos.py
src/backend/emodia/migrations/: 0001_initial.py  0002_emotionrecord_sports.py  0002_workoutsession_poseframe.py  0002_workoutsession_poseframe_mlmodel_feedbackrating_and_more.py  0003_emotionrecord_emotion_score_and_more.py  0003_emotionrecord_intensity_emotionrecord_mood_after_and_more.py  0004_add_dummy_data.py  0004_alter_emotionvideo_options_emotionvideo_body_part_and_more.py  0004_sports_alter_emotionrecord_date_and_more.py
src/backend/profiles/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/backend/profiles/migrations/: 0001_initial.py  0002_profile_routine_days.py
src/backend/testemo/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/users/: admin.py  apps.py  serializers.py  signals.py  urls.py  views.py
