[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "powerwook",email = "powerwook@naver.com"}
]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.12"

# Web Scraping & Server
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
