[tool.poetry]
name = "backend"
version = "0.1.0"
description = "My Django backend project"
authors = ["powerwook <powerwook@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
beautifulsoup4 = "4.12.3"
Django = "4.2.24"
djangorestframework = "3.16.1"
django-cors-headers = "4.9.0"
mysqlclient = "2.2.7"
djangorestframework-simplejwt = "5.5.1"
dotenv = "^0.9.9"
numpy = "^1.26"
opencv-python = "4.8.1.78"
mediapipe = "^0.10.21"
pandas = "^2.3.2"
scipy = "^1.16.2"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
python-socketio = "^5.13.0"


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
